# Stands

./: .gitignore  README.md  get_curtidas.py
Esteira/ard_bolinha/: main_esteira.ino
Esteira/ard_esteira/: HAMS.cpp  HAMS.h  Radio.cpp  Radio.h  ard_esteira.ino
Esteira/ard_joystick/: ard_joystick.ino
Esteira/ros/src/Cores/: CMakeLists.txt  package.xml
Esteira/ros/src/Cores/lib/: color_detection.cpp  color_detection.hpp
Esteira/ros/src/Cores/src/: continuo_ROS.cpp  discreto_ROS.cpp  hsv_choose.cpp
Esteira/ros/src/Cores/src/hsv_choose/: CMakeLists.txt  hsv_choose.cpp
Esteira/ros/src/esteira/: CMakeLists.txt  package.xml
Esteira/ros/src/esteira/launch/: bola.launch  cubo.launch  params.launch
Esteira/ros/src/esteira/lib/: rs232_class.cpp  rs232_class.hpp
Esteira/ros/src/esteira/lib/teste/: teste  teste_rs232_class.cpp
Esteira/ros/src/esteira/src/: main.cpp
VSS-Sim/: Simulator.cpp  strategy.cpp
VT_Sim/: .gitignore  README.md
VT_Sim/Bash/: run.sh  run_field.sh  run_flatfield.sh
VT_Sim/Models/Field_bowl/: model.config  model.sdf
VT_Sim/Models/Field_flat/: model.config  model.sdf
VT_Sim/Models/VT/: model.config  model.sdf
VT_Sim/Models/VT_simplificado/: model.config  model.rsdf  model.sdf
VT_Sim/Modules/Plugin_GUI/: DockTitleBar.py  Graphs.py  Image.py  Main_Window.py  Slider.py  all_in_one.py  general_utils.py  main.py  py_graph.py  qt_utils.py  requirements  topics.yaml  topics_teste.yaml  topics_vt.yaml
VT_Sim/Plugins/VT_sim/: CMakeLists.txt  VT_sim_plugin.cpp  compile.sh  rename_plugin.sh
VT_Sim/Worlds/: VT_sim.world  vt_bowlfield.world  vt_flatfield.world
